Run openrewrite UpgradeToJava21 recipe